--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -7,58 +7,32 @@ Version: <b>{{version}} {{#if baseVersion}}({{baseVersion}}){{/if}}</b>
 </small>
 </div>
 
-<div><img src="img/black_logo_200w.png" style="display: block; margin-left: auto; margin-right: auto;"></img></div>
-
+<div><img src="img/black_logo_200w.png" style="height: 70px; display: block; margin-left: auto; margin-right: auto;"></img></div>
+<br/>
 <style>
 td {
 	font-weight: bold;
 	font-size: 125%;
+	padding-bottom: 30px;
+	color: #478FCC;
 }
 </style>
 
-<table style="width:99.5%; "> <!--height:99.5%; position:absolute;
-	<tr height="0%">
-		<td colspan="2">
-		<div id="sync_progress" class="alert alert-info" style="display:none">
-			<button id="sync_cancel" type="button" class="btn">Cancel</button>
-			&nbsp;
-			<img id="sync_spinner" src="images/ajax-loader.gif"/>
-			&nbsp;
-			<span id="sync_progress_message">Synchronizing...</span>
-		</div><div id="sync_error" class="alert alert-error" style="display:none"></div>
-		<div id="sync_success" class="alert alert-success" style="display:none">
-			Synchronization successful
-		</div></td>
-	</tr>-->
+<table style="width:99.5%;">
 	<tr>
-		<td align="center"><img id="sources" class="icon tappable" src="img/96x96.png"/>
+		<td id="source_map" align="center" class="tappable"><img id="sources" class="icon tappable" src="img/source_map_icon.png"/>
 		<br/>
 		Map of Water Sources</td>
-		<td align="center"><img id="map" class="icon tappable" src="img/96x96.png"/>
+		<td id="source_list" align="center" class="tappable"><img id="map" class="icon tappable" src="img/source_list_icon.png"/>
 		<br/>
-		Nearby Water Sources </td>
+		List Water Sources </td>
 	</tr>
 	<tr>
-		<td align="center"><img id="tests" class="icon tappable" src="img/96x96.png"/>
+		<td id="new_test" align="center" class="tappable"><img id="tests" class="icon tappable" src="img/test_icon.png"/>
 		<br/>
 		Start Water Test</td>
-		<td align="center"><img id="settings" class="icon tappable" src="img/96x96.png"/>
+		<td id="new_survey" align="center" class="tappable"><img id="settings" class="icon tappable" src="img/survey_icon.png"/>
 		<br/>
 		Start Survey</td>
 	</tr>
 </table>
-<!--
-<p>mWater combines mobile technology with water testing to help ensure safe drinking water for everyone.</p>
-
-<p>To perform tasks, click on the menu button at the top right corner. This will show you all of the basic activities that can be performed.</p>
-
-<p>You can browse nearby water sources in the list of sources. You can also see water sources on a map.</p>
-
-<p>Recording water tests is as easy as clicking on the plus icon, or opening a particular water source and clicking Add. mWater supports a wide range of water tests and has reliable, low-cost water tests available for sale.</p>
-
-<p>Some actions will require you to be logged in and will ask you for a username and password. If you do not have one, signing up is an easy one step process.</p>
-
-<p>This app works both with and without a data connection. Any changes that you make while not connected will be automatically uploaded the next time you use the app with a data connection.</p>
-
-<p>mWater includes a powerful and flexible survey engine. Start a sample survey or see the complete list of available surveys. Any work that you do on a survey is always immediately backed up, and you can leave and return to complete a survey at a later time.</p>
--->
