--- a/app/templates/pages/LoginPage.hbs
+++ b/app/templates/pages/LoginPage.hbs
@@ -5,7 +5,7 @@
 <div class="page">
   <h3>Welcome to mWater</h3>
   <div>
-    <button id="demo_button" type="submit" class="btn btn-large" style="background-color: #478FCC">Demo</button> 
+    <button id="demo_button" type="submit" class="btn btn-large btn-primary" style="background-color: #478FCC;">Demo</button> 
     <i class="icon-arrow-left"></i> Try out app without an account
   <div>
   <br>
