--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -7,7 +7,7 @@ Version: <b>{{version}} {{#if baseVersion}}({{baseVersion}}){{/if}}</b>
 </small>
 </div>
 
-<div><img src="img/black_logo_200w.png" style="height: 70px; display: block; margin-left: auto; margin-right: auto;"></img></div>
+<div><img src="img/black_logo.png" style="display: block; margin-left: auto; margin-right: auto;"></img></div>
 <br/>
 <style>
 td {
@@ -16,22 +16,28 @@ td {
 	padding-bottom: 30px;
 	color: #478FCC;
 }
+
+.main_icon {
+	width: 150px;
+	height: 150px;
+	margin-bottom: 10px;
+}
 </style>
 
 <table style="width:99.5%;">
 	<tr>
-		<td id="source_map" align="center" class="tappable"><img id="sources" class="icon tappable" src="img/source_map_icon.png"/>
+		<td id="source_map" align="center" class="tappable"><img id="sources" class="main_icon tappable" src="img/source_map_icon.png"/>
 		<br/>
 		Map of Water Sources</td>
-		<td id="source_list" align="center" class="tappable"><img id="map" class="icon tappable" src="img/source_list_icon.png"/>
+		<td id="source_list" align="center" class="tappable"><img id="map" class="main_icon tappable" src="img/source_list_icon.png"/>
 		<br/>
 		List Water Sources </td>
 	</tr>
 	<tr>
-		<td id="new_test" align="center" class="tappable"><img id="tests" class="icon tappable" src="img/test_icon.png"/>
+		<td id="new_test" align="center" class="tappable"><img id="tests" class="main_icon tappable" src="img/test_icon.png"/>
 		<br/>
 		Start Water Test</td>
-		<td id="new_survey" align="center" class="tappable"><img id="settings" class="icon tappable" src="img/survey_icon.png"/>
+		<td id="new_survey" align="center" class="tappable"><img id="settings" class="main_icon tappable" src="img/survey_icon.png"/>
 		<br/>
 		Start Survey</td>
 	</tr>
