--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -3,8 +3,9 @@
 		<div class="container" style="width: auto">
 			<i class="icon-chevron-left icon-white" id="navbar_back" 
 				style="margin-top: 13px; margin-left: 1px; float: left;"></i>
-			<a class="brand">
-				<span id="navbar_title"></span>
+			<a class="brand" style="padding-top: 0; padding-bottom: 0; ">
+  				<img id="brand_logo" src="img/black_logo_40.png">
+				<span id="navbar_title" style="line-height: 40px"></span>
 			</a>
 			<ul class="nav pull-right">
 			  <li>
