Cleaned up main screen

--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -1,6 +1,6 @@
 <div class="navbar navbar-inverse navbar-fixed-top" id="header">
 	<div class="navbar-inner">
-		<div class="container" style="width: auto">
+		<div class="container" style="width: auto; background-color: black"> {{! TODO hack because of logo }}
 			<i class="icon-chevron-left icon-white" id="navbar_back" 
 				style="margin-top: 13px; margin-left: 1px; float: left;"></i>
 			<a class="brand" style="padding-top: 0; padding-bottom: 0; ">
