--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -11,12 +11,13 @@ Version: <b>{{version}} {{#if baseVersion}}({{baseVersion}}){{/if}}</b>
 td {
 	font-weight: bold;
 	padding-bottom: 30px;
+	padding-top: 15px;
 	color: #478FCC;
 }
 
 .main_icon {
-	width: 150px;
-	height: 150px;
+	width: 120px;
+	height: 120px;
 	margin-bottom: 6px;
 	box-shadow: 5px 5px 5px #c0c0c0;
 	border: 1px solid #F0F0F0;
