--- a/app/templates/pages/LoginPage.hbs
+++ b/app/templates/pages/LoginPage.hbs
@@ -19,7 +19,7 @@
       <div class="tab-pane active" id="tab1">
         <form id="form_signup">
           <div>
-              <input id="signup_username" type="text" autocapitalize="off" autocorrect="off" placeholder="Username" />
+              <input id="signup_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
           </div>
           <div>
               <input id="signup_password" type="password" placeholder="Password" />
@@ -37,7 +37,7 @@
       <div class="tab-pane" id="tab2">
         <form id="form_login">
           <div>
-              <input id="login_username" type="text" autocapitalize="off" autocorrect="off" placeholder="Username" />
+              <input id="login_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
           </div>
           <div>
               <input id="login_password" type="password" placeholder="Password" />
