--- a/app/templates/PageMenu.hbs
+++ b/app/templates/PageMenu.hbs
@@ -12,4 +12,5 @@
 <li><a id="report_problem"><i class="icon-exclamation-sign icon-white"></i> Report a Problem</a></li>
 <li><a id="logout"><i class="icon-off icon-white"></i> Logout</a></li>
 <li><a id="import"><i class="icon-none icon-white"></i> Import Data</a></li>
+<li><a id="admin"><i class="icon-none icon-white"></i> Admin</a></li>
 </ul>
