--- a/app/templates/LocationView.hbs
+++ b/app/templates/LocationView.hbs
@@ -1,4 +1,6 @@
 <button id="location_set" class="btn"><i class="icon-screenshot"></i> Set</button>
 <button id="location_clear" class="btn"><i class="icon-remove"></i> Clear</button>
 <button id="location_map" class="btn"><i class="icon-map-marker"></i> Map</button>
-<span class="buttoned" id="location_relative"> </span>
+<span class="buttoned">
+	<span id="location_absolute"> </span> (<span id="location_relative"></span>)
+</span>
