--- a/app/templates/LocationView.hbs
+++ b/app/templates/LocationView.hbs
@@ -1,6 +1,14 @@
-<button id="location_set" class="btn"><i class="icon-screenshot"></i> Set</button>
-<button id="location_clear" class="btn"><i class="icon-remove"></i> Clear</button>
-<button id="location_map" class="btn"><i class="icon-map-marker"></i> Map</button>
-<span class="buttoned">
-	<span id="location_absolute"> </span> (<span id="location_relative"></span>)
-</span>
+<div>
+	<button id="location_set" class="btn"><i class="icon-screenshot"></i> Set</button>
+	<button id="location_clear" class="btn"><i class="icon-remove"></i> Clear</button>
+	<button id="location_map" class="btn"><i class="icon-map-marker"></i> Map</button>
+	<button id="location_edit" class="btn"><i class="icon-edit"></i> Edit</button>
+	<span class="buttoned">
+		<span id="location_absolute"> </span> (<span id="location_relative"></span>)
+	</span>
+</div>
+<div id="location_edit_controls" class="form-inline" style="margin-top: 5px; display:none;">
+	Latitude: <input type="number" id="latitude" step="any"/> Longitude: <input type="number" id="longitude" step="any"/> 
+	<button id="save_button" type="button" class="btn btn-primary">Save</button>	
+	<button id="cancel_button" type="button" class="btn">Cancel</button>	
+</div>
