--- a/forms/WaterAidWQSurvey/views/detail.hbs
+++ b/forms/WaterAidWQSurvey/views/detail.hbs
@@ -1,3 +1,5 @@
+<table>
 {{#eachProperty this}}
-	<div><span class="muted">{{key}}</span>: {{value}}</div>
+	<tr><td align="right"><span class="muted">{{key}}:</span></td><td>{{value}}</td></tr>
 {{/eachProperty}}
+</table>
