--- a/forms/WaterAidWQSurvey/views/detail.hbs
+++ b/forms/WaterAidWQSurvey/views/detail.hbs
@@ -1,5 +1,3 @@
-<table>
 {{#eachProperty this}}
-	<tr><td align="right"><span class="muted">{{key}}:</span></td><td>{{value}}</td></tr>
+	<div><span class="muted">{{key}}:</span> {{value}}</div>
 {{/eachProperty}}
-</table>
