--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -47,13 +47,10 @@
         </div>
         {{/if}}
     </div>
-    <div class="row-fluid">
-        <div class="span12">
+    <div class="row">
+        <div class="col-md-12">
             <h4>Location</h4>
             <div id="location"></div>
-            {{! TODO put back in }}
-            <!--<h4>Analysis</h4>
-            <table id="analyses" class="table"></table>-->
 
             <button id="add_test_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
             <h4 class="buttoned">Water Tests</h4>
@@ -64,7 +61,7 @@
             <table id="notes" class="table"></table>
         </div>
     </div>
-    <div class="row-fluid">
+    <div class="row">
       <h4>Photos</h4>
       <div id="photos"></div>
     </div>
