Converted all glyphicons

--- a/app/templates/ContextMenu.hbs
+++ b/app/templates/ContextMenu.hbs
@@ -2,7 +2,7 @@
 <ul>
   {{#each items}}
   <li><a id="{{id}}" class="menuitem">
-    <i class="icon-{{glyph}} icon-white"></i> {{text}}</a></li>
+    <span class="glyphicon glyphicon-{{glyph}}"></span> {{text}}</a></li>
   {{/each}}
 </ul>
 {{/if}}
