--- a/app/templates/pages/NewSurveyPage.hbs
+++ b/app/templates/pages/NewSurveyPage.hbs
@@ -11,7 +11,7 @@
   {{#each forms}}
   <tr class="survey tappable" id="{{code}}">
     <td>{{name}}</a>
-    <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
+    <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
   </tr>
   {{/each}}
 </table>
