--- a/app/templates/pages/NewTestPage.hbs
+++ b/app/templates/pages/NewTestPage.hbs
@@ -13,7 +13,7 @@
     <td><strong>{{name}}</strong> 
     <br/>
     <span class="muted">{{desc}}&nbsp;</span></td>
-    <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
+    <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
   </tr>
   {{/each}}
 </table>
