--- a/app/templates/pages/SourcePage_notes.hbs
+++ b/app/templates/pages/SourcePage_notes.hbs
@@ -8,7 +8,7 @@
     {{#is status "missing"}}<span class="text-error">No longer exists</span>{{/is}}
   </td>
   <td>{{#if notes}}<span class="muted">{{truncate notes 31 "..."}}{{/if}}</td>
-  <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
+  <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 </tr>
 {{else}}
 <tr>
