--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -1,8 +1,8 @@
 <div class="navbar navbar-inverse navbar-fixed-top" id="header">
 	<div class="navbar-inner">
 		<div class="container" style="width: auto; background-color: black"> {{! TODO hack because of logo }}
-			<i class="icon-chevron-left icon-white" id="navbar_back" 
-				style="margin-top: 13px; margin-left: 1px; float: left;"></i>
+			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" 
+				style="margin-top: 13px; margin-left: 1px; float: left;"></span>
 			<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
   				<img id="brand_logo" src="img/black_logo_40.png">
 				<span id="navbar_title" style="line-height: 40px"></span>
