--- a/app/templates/LocationView.hbs
+++ b/app/templates/LocationView.hbs
@@ -1,8 +1,8 @@
 <div>
-	<button id="location_set" class="btn"><i class="icon-screenshot"></i> Set</button>
-	<button id="location_clear" class="btn"><i class="icon-remove"></i> Clear</button>
-	<button id="location_map" class="btn"><i class="icon-map-marker"></i> Map</button>
-	<button id="location_edit" class="btn"><i class="icon-edit"></i> Edit</button>
+	<button id="location_set" class="btn"><span class="glyphicon glyphicon-screenshot"></span> Set</button>
+	<button id="location_clear" class="btn"><span class="glyphicon glyphicon-remove"></span> Clear</button>
+	<button id="location_map" class="btn"><span class="glyphicon glyphicon-map-marker"></span> Map</button>
+	<button id="location_edit" class="btn"><span class="glyphicon glyphicon-edit"></span> Edit</button>
 	<span class="buttoned">
 		<span id="location_absolute"> </span> (<span id="location_relative"></span>)
 	</span>
