--- a/app/templates/PageMenu.hbs
+++ b/app/templates/PageMenu.hbs
@@ -1,16 +1,16 @@
 <h3></h3>
 <ul>
-<li><a id="home"><i class="icon-home icon-white"></i> Home</a></li>
-<li><a id="login"><i class="icon-user icon-white"></i> Login</a></li>
-<li><a id="source_list"><i class="icon-th-list icon-white"></i> List of Sources</a></li>
-<li><a id="source_map"><i class="icon-map-marker icon-white"></i> Map of Sources</a></li>
-<li><a id="new_test"><i class="icon-tint icon-white"></i> Start New Water Test</a></li>
-<li><a id="existing_test"><i class="icon-tint icon-white"></i> Recent Water Tests</a></li>
-<li><a id="new_survey"><i class="icon-list-alt icon-white"></i> Start New Survey</a></li>
-<li><a id="existing_survey"><i class="icon-check icon-white"></i> Recent Surveys</a></li>
-<li><a id="settings"><i class="icon-cog icon-white"></i> Settings</a></li>
-<li><a id="report_problem"><i class="icon-exclamation-sign icon-white"></i> Report a Problem</a></li>
-<li><a id="logout"><i class="icon-off icon-white"></i> Logout</a></li>
-<li><a id="import_sources"><i class="icon-none icon-white"></i> Import Sources</a></li>
-<li><a id="admin"><i class="icon-none icon-white"></i> Admin</a></li>
+<li><a id="home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+<li><a id="login"><span class="glyphicon glyphicon-user"></span> Login</a></li>
+<li><a id="source_list"><span class="glyphicon glyphicon-th-list"></span> List of Sources</a></li>
+<li><a id="source_map"><span class="glyphicon glyphicon-map-marker"></span> Map of Sources</a></li>
+<li><a id="new_test"><span class="glyphicon glyphicon-tint"></span> Start New Water Test</a></li>
+<li><a id="existing_test"><span class="glyphicon glyphicon-tint"></span> Recent Water Tests</a></li>
+<li><a id="new_survey"><span class="glyphicon glyphicon-list-alt"></span> Start New Survey</a></li>
+<li><a id="existing_survey"><span class="glyphicon glyphicon-check"></span> Recent Surveys</a></li>
+<li><a id="settings"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
+<li><a id="report_problem"><span class="glyphicon glyphicon-exclamation-sign"></span> Report a Problem</a></li>
+<li><a id="logout"><span class="glyphicon glyphicon-off"></span> Logout</a></li>
+<li><a id="import_sources"><span class="glyphicon glyphicon-none"></span> Import Sources</a></li>
+<li><a id="admin"><span class="glyphicon glyphicon-none"></span> Admin</a></li>
 </ul>
