--- a/app/templates/pages/ExistingSurveyPage_items.hbs
+++ b/app/templates/pages/ExistingSurveyPage_items.hbs
@@ -6,7 +6,7 @@
 		<br/>
 		<span class="muted">{{code}}</span>
 	</td>
-	<td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
+	<td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 </tr>
 {{else}}
 <tr>
