--- a/app/templates/pages/LoginPage.hbs
+++ b/app/templates/pages/LoginPage.hbs
@@ -6,7 +6,7 @@
   <h3>Welcome to mWater</h3>
   <div>
     <button id="demo_button" type="submit" class="btn btn-large btn-primary" style="background-color: #478FCC;">Demo</button> 
-    <i class="icon-arrow-left"></i> Try out app
+    <span class="glyphicon glyphicon-arrow-left"></span> Try out app
   <div>
   <br>
   <br>
