--- a/app/templates/pages/SourceListPage_items.hbs
+++ b/app/templates/pages/SourceListPage_items.hbs
@@ -5,7 +5,7 @@
     <br/>
     <span class="muted">{{desc}}&nbsp;</span></td>
     <td><strong>{{code}}</strong></td>
-    <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
+    <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 </tr>
 {{else}}
 <tr>
