--- a/app/templates/pages/TestListPage_items.hbs
+++ b/app/templates/pages/TestListPage_items.hbs
@@ -7,7 +7,7 @@
   </td>
   <td style="border-left:none;"><strong>{{#if data.source}}Source {{data.source}}{{/if}}</strong></td>
   <td style="border-left:none;">{{formatDate started "%F"}}</strong></td>
-  <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
+  <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 </tr>
 {{else}}
 <tr>
