--- a/app/templates/pages/TestPage.hbs
+++ b/app/templates/pages/TestPage.hbs
@@ -24,5 +24,5 @@
 
 {{#if test.completed}}
 <br/>
-<div><button id="edit_button" type="button" class="btn margined"><i class="icon-edit"></i> Edit Test</button></div>
+<div><button id="edit_button" type="button" class="btn margined"><span class="glyphicon glyphicon-edit"></span> Edit Test</button></div>
 {{/if}}
