Basic suggested changes done

--- a/app/templates/LocationView.hbs
+++ b/app/templates/LocationView.hbs
@@ -1,8 +1,8 @@
 <div>
-	<button id="location_set" class="btn"><span class="glyphicon glyphicon-screenshot"></span> Set</button>
-	<button id="location_clear" class="btn"><span class="glyphicon glyphicon-remove"></span> Clear</button>
-	<button id="location_map" class="btn"><span class="glyphicon glyphicon-map-marker"></span> Map</button>
-	<button id="location_edit" class="btn"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+	<button id="location_set" class="btn btn-default"><span class="glyphicon glyphicon-screenshot"></span> Set</button>
+	<button id="location_clear" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Clear</button>
+	<button id="location_map" class="btn btn-default"><span class="glyphicon glyphicon-map-marker"></span> Map</button>
+	<button id="location_edit" class="btn btn-default"><span class="glyphicon glyphicon-edit"></span> Edit</button>
 	<span class="buttoned">
 		<span id="location_absolute"> </span> (<span id="location_relative"></span>)
 	</span>
@@ -10,5 +10,5 @@
 <div id="location_edit_controls" class="form-inline" style="margin-top: 5px; display:none;">
 	Latitude: <input type="number" id="latitude" step="any"/> Longitude: <input type="number" id="longitude" step="any"/> 
 	<button id="save_button" type="button" class="btn btn-primary">Save</button>	
-	<button id="cancel_button" type="button" class="btn">Cancel</button>	
+	<button id="cancel_button" type="button" class="btn btn-default">Cancel</button>	
 </div>
