--- a/app/templates/forms/Sections.hbs
+++ b/app/templates/forms/Sections.hbs
@@ -1,6 +1,6 @@
 <ul class="breadcrumb"></ul>
 <div class="sections"></div>
-<button id="close" type="button" class="btn">Save for Later</button>&nbsp;
+<button id="close" type="button" class="btn btn-default">Save for Later</button>&nbsp;
 <button type="button" class="btn prev"><span class="glyphicon glyphicon-backward"></span> Back</button>&nbsp;
 <button type="button" class="btn btn-primary next">Next <span class="glyphicon glyphicon-forward"></span></button>
 <button type="button" class="btn btn-primary finish">Finish</button>
