--- a/app/templates/pages/AdminPage.hbs
+++ b/app/templates/pages/AdminPage.hbs
@@ -6,7 +6,7 @@
   <input id="new_password" type="text" placeholder="Password" />
 </div>
 <div>
-  <button id="change_password_button" type="button" class="btn">Change Password</button>
+  <button id="change_password_button" type="button" class="btn btn-default">Change Password</button>
 </div>
 <br/><br/>
 
@@ -21,7 +21,7 @@
   <div id="update_row_orgs" class="checkbox">Move user's existing data to new organization</div>
 </div>	
 <div>
-  <button id="set_org_button" type="button" class="btn">Change Organization</button>
+  <button id="set_org_button" type="button" class="btn btn-default">Change Organization</button>
 </div>
 <br/><br/>
 
