--- a/app/templates/pages/LoginPage.hbs
+++ b/app/templates/pages/LoginPage.hbs
@@ -5,7 +5,7 @@
 <div class="page">
   <h3>Welcome to mWater</h3>
   <div>
-    <button id="demo_button" type="submit" class="btn btn-large btn-primary" style="background-color: #478FCC;">Demo</button> 
+    <button id="demo_button" type="submit" class="btn btn-lg btn-primary" style="background-color: #478FCC;">Demo</button> 
     <span class="glyphicon glyphicon-arrow-left"></span> Try out app
   <div>
   <br>
@@ -26,7 +26,7 @@
           </div>
           <br/>
           <div>
-              <input id="signup_email" type="email" class="input-xlarge" placeholder="Email">
+              <input id="signup_email" type="email" placeholder="Email">
               <span class="help-block">Note: Your email address will never be shared</span>
           </div>
           <div>
