--- a/app/templates/pages/SettingsPage.hbs
+++ b/app/templates/pages/SettingsPage.hbs
@@ -4,7 +4,7 @@
 <div>
     Number of sources that can be created offline: <b>{{offlineSourceCodes}}</b>
 </div>
-<button id="request_source_codes" class="btn" type="button">Request more</button>
+<button id="request_source_codes" class="btn btn-default" type="button">Request more</button>
 {{/if}}
 
 <h4>Advanced</h4>
@@ -14,7 +14,7 @@
 </div>
 
 <div>
-	<button id="test_ecplates" class="btn" type="button">Test EC Compact Dry Plate Counter</button>
+	<button id="test_ecplates" class="btn btn-default" type="button">Test EC Compact Dry Plate Counter</button>
 </div>
 <br/><br/>
 <div>
