--- a/app/templates/pages/SourceEditPage.hbs
+++ b/app/templates/pages/SourceEditPage.hbs
@@ -6,7 +6,7 @@
             Save
         </button>
         &nbsp;
-        <button id="cancel_button" type="button" class="btn margined">
+        <button id="cancel_button" type="button" class="btn btn-default margined">
             Cancel
         </button>
     </div>
