--- a/app/templates/pages/SurveyPage.hbs
+++ b/app/templates/pages/SurveyPage.hbs
@@ -25,5 +25,5 @@
 
 {{#if response.completed}}
 <br/>
-<div><button id="edit_button" type="button" class="btn margined"><span class="glyphicon glyphicon-edit"></span> Edit Survey</button></div>
+<div><button id="edit_button" type="button" class="btn btn-default margined"><span class="glyphicon glyphicon-edit"></span> Edit Survey</button></div>
 {{/if}}
