--- a/app/templates/images/ImageUploader.hbs
+++ b/app/templates/images/ImageUploader.hbs
@@ -9,10 +9,10 @@
         <div class="bar" style="width: 0%;"></div>
       </div>
     </form>
-    <button id="cancel" class="btn" disabled="disabled">Cancel</button>
+    <button id="cancel" class="btn btn-default" disabled="disabled">Cancel</button>
   </div>
   <div class="modal-footer">
-    <button id="close" class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button id="close" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
     <button id="upload" disabled="disabled" class="btn btn-primary">Upload</button>
   </div>
 </div>
