Switched form controls to new format

--- a/app/templates/LocationView.hbs
+++ b/app/templates/LocationView.hbs
@@ -8,7 +8,10 @@
 	</span>
 </div>
 <div id="location_edit_controls" class="form-inline" style="margin-top: 5px; display:none;">
-	Latitude: <input type="number" id="latitude" step="any"/> Longitude: <input type="number" id="longitude" step="any"/> 
+	Latitude: 
+	<input type="number" class="form-control" id="latitude" step="any"/> 
+	Longitude: 
+	<input type="number" class="form-control" id="longitude" step="any"/> 
 	<button id="save_button" type="button" class="btn btn-primary">Save</button>	
 	<button id="cancel_button" type="button" class="btn btn-default">Cancel</button>	
 </div>
