--- a/app/templates/pages/AdminPage.hbs
+++ b/app/templates/pages/AdminPage.hbs
@@ -1,9 +1,9 @@
 <h5>Change user's password</h5>
 <div>
-  <input id="password_username" type="text" autocapitalize="off" autocorrect="off" placeholder="Username" />
+  <input class="form-control" id="password_username" type="text" autocapitalize="off" autocorrect="off" placeholder="Username" />
 </div>
 <div>
-  <input id="new_password" type="text" placeholder="Password" />
+  <input class="form-control" id="new_password" type="text" placeholder="Password" />
 </div>
 <div>
   <button id="change_password_button" type="button" class="btn btn-default">Change Password</button>
@@ -12,10 +12,10 @@
 
 <h5>Set user's organization</h5>
 <div>
-  <input id="org_username" type="text" autocapitalize="off" autocorrect="off" placeholder="Username" />
+  <input class="form-control" id="org_username" type="text" autocapitalize="off" autocorrect="off" placeholder="Username" />
 </div>
 <div>
-  <input id="new_org" type="text" autocapitalize="off" autocorrect="off" placeholder="Organization" />
+  <input class="form-control" id="new_org" type="text" autocapitalize="off" autocorrect="off" placeholder="Organization" />
 </div>
 <div>
   <div id="update_row_orgs" class="checkbox">Move user's existing data to new organization</div>
