--- a/app/templates/pages/LoginPage.hbs
+++ b/app/templates/pages/LoginPage.hbs
@@ -18,15 +18,15 @@
     <div class="tab-content">
       <div class="tab-pane active" id="tab1">
         <form id="form_signup">
-          <div>
-              <input id="signup_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
+          <div class="form-group">
+              <input class="form-control" id="signup_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
           </div>
-          <div>
-              <input id="signup_password" type="password" placeholder="Password" />
+          <div class="form-group">
+              <input class="form-control" id="signup_password" type="password" placeholder="Password" />
           </div>
           <br/>
-          <div>
-              <input id="signup_email" type="email" placeholder="Email">
+          <div class="form-group">
+              <input class="form-control" id="signup_email" type="email" placeholder="Email">
               <span class="help-block">Note: Your email address will never be shared</span>
           </div>
           <div>
@@ -36,11 +36,11 @@
       </div>
       <div class="tab-pane" id="tab2">
         <form id="form_login">
-          <div>
-              <input id="login_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
+          <div class="form-group">
+              <input class="form-control" id="login_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
           </div>
-          <div>
-              <input id="login_password" type="password" placeholder="Password" />
+          <div class="form-group">
+              <input class="form-control" id="login_password" type="password" placeholder="Password" />
           </div>
           <div>
               <button id="login_button" type="submit" class="btn btn-primary">Login</button>
