--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -1,22 +1,23 @@
-<div class="navbar navbar-inverse navbar-fixed-top" id="header">
-	<div class="navbar-inner">
-		<div class="container" style="width: auto; background-color: black"> {{! TODO hack because of logo }}
-			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" 
-				style="margin-top: 13px; margin-left: 1px; float: left;"></span>
-			<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
-  				<img id="brand_logo" src="img/black_logo_40.png">
-				<span id="navbar_title" style="line-height: 40px"></span>
-			</a>
-			<ul class="nav pull-right">
-			  <li>
-			    <a id="navbar_slidemenu_button" class="menuitem" style="background: url(img/menu.png) no-repeat 0; width: 6px;">
-					&nbsp;
-			    </a>
-			  </li>
-			</ul>
-			<div id="navbar_buttons">
-			</div>
+<nav class="navbar navbar-inverse navbar-fixed-top" id="header">
+	<div class="navbar-header" style="float:left;">
+		<span class="glyphicon glyphicon-chevron-left" id="navbar_back" style="margin-top: 16px; margin-left: 1px; float: left; color: white; visibility: visible;">
+		</span>
+		<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
+			<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
+		</a>
+  		<a class="navbar-brand">
+			<span id="navbar_title">Nearby Sources</span>
+		</a>
+	</div>
+	<div class="collapse navbar-collapse" style="background-color: black; display:block;"> {{! TODO hack because of logo }}
+	    <button id="navbar_slidemenu_button" type="button" class="navbar-toggle" style="display:block; margin-left: 24px">
+      		<span class="icon-bar"></span>
+      		<span class="icon-bar"></span>
+      		<span class="icon-bar"></span>
+    	</button>
+
+		<div id="navbar_buttons">
 		</div>
 	</div>
-</div>
+</nav>
 <div class="appview_content"></div>
