Removed bootstrap theme. Misc fixes

--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -65,7 +65,9 @@
         </div>
     </div>
     <div class="row">
-      <h4>Photos</h4>
-      <div id="photos"></div>
+      <div class="col-md-12">
+        <h4>Photos</h4>
+        <div id="photos"></div>
+      </div>
     </div>
 </div>
