Improved csv source import

--- a/app/templates/pages/ImportSourcesPage.hbs
+++ b/app/templates/pages/ImportSourcesPage.hbs
@@ -7,6 +7,8 @@
   <li>type: type of source (see http://api.mwater.co/v3/source_types)</li>
   <li>latitude: latitude of source</li>
   <li>longitude: longitude of source</li>
+  <li>private: "true" if source should be private</li>
+  <li>org: organization to upload as (available to admin only)</li>
 </ul>
 Other fields will be added as custom fields and preserved.
 </div>
