--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -1,21 +1,13 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" id="header">
-	<div class="navbar-header" style="float:left;">
+<nav class="navbar navbar-inverse navbar-fixed-top" id="header" style="background-color: black;">
+	<div class="navbar-header" style="width: 100%">
 		<span class="glyphicon glyphicon-chevron-left" id="navbar_back" style="margin-top: 16px; margin-left: 1px; float: left; color: white; visibility: visible;">
 		</span>
 		<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
 			<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
 		</a>
-  		<a class="navbar-brand">
-			<span id="navbar_title">Nearby Sources</span>
+  		<a class="navbar-brand" style="padding-left: 5px;">
+			<span id="navbar_title"></span>
 		</a>
-	</div>
-	<div class="collapse navbar-collapse" style="background-color: black; display:block;"> {{! TODO hack because of logo }}
-	    <button id="navbar_slidemenu_button" type="button" class="navbar-toggle" style="display:block; margin-left: 24px">
-      		<span class="icon-bar"></span>
-      		<span class="icon-bar"></span>
-      		<span class="icon-bar"></span>
-    	</button>
-
 		<div id="navbar_buttons">
 		</div>
 	</div>
