--- a/app/templates/pages/SourcePage_notes.hbs
+++ b/app/templates/pages/SourcePage_notes.hbs
@@ -1,17 +1,19 @@
-{{#each notes}}
-<tr class="tappable note" id="{{_id}}">
-  <td><strong>{{date}}</strong></td>
-  <td style="border-left:none;">
-    {{#is status "ok"}}<span class="text-success">Functional</span>{{/is}}
-    {{#is status "repair"}}<span class="text-warning">Needs repair</span>{{/is}}
-    {{#is status "broken"}}<span class="text-error">Non-functional</span>{{/is}}
-    {{#is status "missing"}}<span class="text-error">No longer exists</span>{{/is}}
-  </td>
-  <td>{{#if notes}}<span class="muted">{{truncate notes 31 "..."}}{{/if}}</td>
-  <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
-</tr>
-{{else}}
-<tr>
-    <td> <i>None</i> </td>
-</tr>
-{{/each}}
+<tbody>
+  {{#each notes}}
+  <tr class="tappable note" id="{{_id}}">
+    <td><strong>{{date}}</strong></td>
+    <td style="border-left:none;">
+      {{#is status "ok"}}<span class="text-success">Functional</span>{{/is}}
+      {{#is status "repair"}}<span class="text-warning">Needs repair</span>{{/is}}
+      {{#is status "broken"}}<span class="text-error">Non-functional</span>{{/is}}
+      {{#is status "missing"}}<span class="text-error">No longer exists</span>{{/is}}
+    </td>
+    <td>{{#if notes}}<span class="muted">{{truncate notes 31 "..."}}{{/if}}</td>
+    <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
+  </tr>
+  {{else}}
+  <tr>
+      <td> <i>None</i> </td>
+  </tr>
+  {{/each}}
+</tbody>  
