--- a/app/templates/pages/TestListPage_items.hbs
+++ b/app/templates/pages/TestListPage_items.hbs
@@ -1,16 +1,18 @@
-{{#each tests}}
-<tr class="tappable" id="{{_id}}">
-  <td>
-  	<strong><span id="name_{{_id}}"></span></strong>
-	<br/>
-	<span class="muted">{{code}}</span>
-  </td>
-  <td style="border-left:none;"><strong>{{#if data.source}}Source {{data.source}}{{/if}}</strong></td>
-  <td style="border-left:none;">{{formatDate started "%F"}}</strong></td>
-  <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
-</tr>
-{{else}}
-<tr>
-    <td> <i>None</i> </td>
-</tr>
-{{/each}}
+<tbody>
+	{{#each tests}}
+	<tr class="tappable" id="{{_id}}">
+	  <td>
+	  	<strong><span id="name_{{_id}}"></span></strong>
+		<br/>
+		<span class="muted">{{code}}</span>
+	  </td>
+	  <td style="border-left:none;"><strong>{{#if data.source}}Source {{data.source}}{{/if}}</strong></td>
+	  <td style="border-left:none;">{{formatDate started "%F"}}</strong></td>
+	  <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
+	</tr>
+	{{else}}
+	<tr>
+	    <td> <i>None</i> </td>
+	</tr>
+	{{/each}}
+</tbody>
