--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -8,7 +8,12 @@
   		<a class="navbar-brand" style="padding-left: 5px;">
 			<span id="navbar_title"></span>
 		</a>
-		<div id="navbar_buttons">
+		<div style="float: right;">
+	  	  	<div id="navbar_slidemenu_button" class="menuitem" style="background: url(img/menu.png) no-repeat 0; width: 40px; margin-top: 8px; height: 35px;">
+	    		&nbsp;
+	  		</div>
+	  	</div>
+   		<div id="navbar_buttons">
 		</div>
 	</div>
 </nav>
