--- a/app/templates/LocationView.hbs
+++ b/app/templates/LocationView.hbs
@@ -7,11 +7,15 @@
 		<span id="location_absolute"> </span> (<span id="location_relative"></span>)
 	</span>
 </div>
-<div id="location_edit_controls" class="form-inline" style="margin-top: 5px; display:none;">
-	Latitude: 
-	<input type="number" class="form-control" id="latitude" step="any"/> 
-	Longitude: 
-	<input type="number" class="form-control" id="longitude" step="any"/> 
+<div id="location_edit_controls" class="form" style="margin-top: 5px; display:none;">
+	<div class="form-group">
+		<label for="latitude">Latitude</label>
+		<input type="number" class="form-control" id="latitude" step="any"/> 
+	</div>
+	<div class="form-group">
+		<label for="longitude">Longitude</label>
+		<input type="number" class="form-control" id="longitude" step="any"/> 
+	</div>
 	<button id="save_button" type="button" class="btn btn-primary">Save</button>	
 	<button id="cancel_button" type="button" class="btn btn-default">Cancel</button>	
 </div>
