--- a/app/templates/images/ImageUploader.hbs
+++ b/app/templates/images/ImageUploader.hbs
@@ -1,18 +1,23 @@
-<div id="modal" class="modal hide fade" tabindex="-1" role="dialog">
-  <div class="modal-header">
-    <h3>Upload Image</h3>
-  </div>
-  <div class="modal-body">
-    <form id="uploadForm" enctype="multipart/form-data" method="post">
-      <input type="file" name="fileToUpload" id="fileToUpload"/>
-      <div class="progress progress-striped active">
-        <div class="bar" style="width: 0%;"></div>
+<div id="modal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Upload Image</h4>
       </div>
-    </form>
-    <button id="cancel" class="btn btn-default" disabled="disabled">Cancel</button>
-  </div>
-  <div class="modal-footer">
-    <button id="close" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button id="upload" disabled="disabled" class="btn btn-primary">Upload</button>
+      <div class="modal-body">
+        <form id="uploadForm" enctype="multipart/form-data" method="post">
+          <input type="file" name="fileToUpload" id="fileToUpload"/>
+          <div class="progress progress-striped active">
+            <div class="bar" style="width: 0%;"></div>
+          </div>
+        </form>
+        <button id="cancel" class="btn btn-default" disabled="disabled">Cancel</button>
+      </div>
+      <div class="modal-footer">
+        <button id="close" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button id="upload" disabled="disabled" class="btn btn-primary">Upload</button>
+      </div>
+    </div>
   </div>
 </div>
